--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>Hello word!</p>
     <p>Hello word!</p>
-<script src="js/script.js"></script>
+
+<!-- <script src="js/script.js"></script> -->
+<script src="js/common.js"></script>
 </body>
 </html>
