--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Hello word!</p>
     <p>Hello word!</p>
 
-<!-- <script src="js/script.js"></script> -->
-<script src="js/common.js"></script>
+<script src="js/script.js"></script>
+<!-- <script src="js/common.js"></script> -->
 </body>
 </html>
